tests/sources/invalid/functions/function_errors.fire
// Function error tests - comprehensive

// Missing return statement in non-void function
fn missing_return(x: int32) -> int32 {
    println("no return!");  //~ ERROR FS-PARSE-0012 @5
}

// Function call with wrong number of arguments
fn takes_two(a: int32, b: int32) -> int32 {
    return a + b;
}

fn wrong_args() -> void {
    result: int32 = takes_two(5);  // Missing argument
    result2: int32 = takes_two(5, 10, 15);  // Too many arguments
}

// Function call with wrong argument types
fn takes_int(x: int32) -> int32 {
    return x;
}

fn wrong_types() -> void {
    result: int32 = takes_int("string");  // Wrong type
}

// Calling undefined function
fn call_undefined() -> void {
    undefined_function(5);  //~ ERROR FS-PARSE-0012 @5
}

// Trying to call a non-function
fn call_non_function() -> void {
    x: int32 = 5;
    result: int32 = x(10);  // x is not a function
}

// Duplicate function definition
fn duplicate_func() -> int32 {
    return 1;
}

fn duplicate_func() -> int32 {  // Duplicate
    return 2;
}

// Return type mismatch
fn wrong_return() -> int32 {
    return "string";  // Wrong return type
}

fn another_wrong_return() -> string {
    return 42;  // Should return string, not int
}
